--- a/_config.yml
+++ b/_config.yml
@@ -55,5 +55,5 @@ sass:
 # Specify the author for blog posts
 author:
   name: Songzi Vong
-  url: https://github.com/vszhub/
+  url: https://github.com/ooouuzy/ousirblog.github.io
   email: vszhub@gmail.com
