--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: Not Pure Poole
 description: A simple, beautiful, and powerful Jekyll theme for blogs
-url: https://vszhub.github.io
+url: https://github.com/ooouuzy/ousirblog.github.io
 avatar: /avatar.jpeg
 paginate: 5
 permalink: pretty
@@ -36,7 +36,7 @@ social:
   name: Songzi Vong
   links:
     - https://twitter.com/vszhub
-    - https://github.com/vszhub
+    - https://github.com/ooouuzy
 google_site_verification: xxxxx
 lang: en
 
@@ -54,6 +54,6 @@ sass:
 
 # Specify the author for blog posts
 author:
-  name: Songzi Vong
-  url: https://github.com/ooouuzy/ousirblog.github.io
-  email: vszhub@gmail.com
+  name: Ou Sir
+  url: https://github.com/ooouuzy/
+  email: 1727514783@qq.com
