--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: Not Pure Poole
 description: A simple, beautiful, and powerful Jekyll theme for blogs
-url: https://github.com/ooouuzy/ousirblog.github.io
+url: https://ousirblog.github.io
 avatar: /avatar.jpeg
 paginate: 5
 permalink: pretty
