--- a/_data/archive.yml
+++ b/_data/archive.yml
@@ -1,9 +1,9 @@
 - type: dates
-  title: Dates
+  title: 时间线
   url: /dates/
-#- type: categories
-#  title: Categories
-#  url: /categories/
+- type: categories
+  title: Categories
+  url: /categories/
 - type: tags
-  title: Tags
+  title: 分类
   url: /tags/
