--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
-title: Not Pure Poole
-description: A simple, beautiful, and powerful Jekyll theme for blogs
-url: https://ousirblog.github.io
+title: 暂无数据
+description: 作者正在飞快装修中！！！
+url: https://ooouuzy.github.io
 avatar: /avatar.jpeg
 paginate: 5
 permalink: pretty
